# neptune

./: .gitignore  README.md  index.html  package-lock.json  package.json
.kiro/specs/music-file-explorer/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/neptune-feature-expansion/: .config.kiro  design.md  requirements.md  tasks.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bpm.rs  commands.rs  crossfade.rs  db.rs  discord.rs  eq.rs  genre.rs  keybinds.rs  lib.rs  main.rs  metadata.rs  panner.rs  player.rs  queue.rs  scanner.rs  spectrogram.rs  types.rs  utils.rs  watcher.rs  waveform.rs
src/components/: AmbientBackground.css  AmbientBackground.tsx  BottomBar.css  BottomBar.tsx  CommandPalette.css  CommandPalette.tsx  CrossfadeSettings.css  CrossfadeSettings.tsx  DbCorruptionModal.css  DbCorruptionModal.tsx  DiscoveryFeed.css  DiscoveryFeed.tsx  EqualizerPanel.css  EqualizerPanel.tsx  FileExplorer.css  FileExplorer.tsx  FoldersPanel.css  FoldersPanel.tsx  KeybindSettings.css  KeybindSettings.tsx  Layout.css  Layout.tsx  MetadataPanel.css  MetadataPanel.tsx  NowPlayingView.css  NowPlayingView.tsx  OscilloscopeVisualizer.css  OscilloscopeVisualizer.tsx  PannerControl.css  PannerControl.tsx  PlaybackControls.css  PlaybackControls.tsx  QueuePanel.css  QueuePanel.tsx  SettingsPanel.css  SettingsPanel.tsx  Sidebar.css  Sidebar.tsx  SpectrogramView.css  SpectrogramView.tsx  (+14 more)
src/store/: index.ts
src/styles/: global.css  tokens.css
